1998-03-27  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome_segv.c: included "config.h"
	(main): Added i18n.
	
1998-03-26  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.h: New files gnome-icon-list.[ch].  This
	provides the GnomeIconList widget.  It is an icon list widget with
	several display modes.  It has an API very similar to the
	GtkCList, so using it should be easy.  It will be used on the file
	manager for the iconic view, for an icon selector property box,
	etc.  It is still not finished and it has bugs, but you can start
	playing with it now.  There is a small example program on
	http://www.nuclecu.unam.mx/~federico/test-ilist.c

	* libgnomeui.h: Added gnome-icon-list.h to the includes.

	* Makefile.am: Added gnome-icon-list.[ch] to the rules.

Thu Mar 26 13:29:18 1998  Radek Doulik  <gis@academy.cas.cz>

	* gnome-client.c (gnome_client_flush): check HAVE_LIBSM, hope I don't
	break something

Wed Mar 25 01:30:00 CET 1998  Eckeherad Berns  <eb@berns.prima.de>

	* stock_demo.c: use the "Really quit?" message box for real.

	* gnome-stock.c: minor i18n fix for clist titles.

Tue Mar 24 23:06:44 CET 1998  Eckeherad Berns  <eb@berns.prima.de>

	* gnome-messagebox.c (gnome_message_box_init): applied patch from
	robert havoc pennington <rhpennin@midway.uchicago.edu> with some
	sanity checks and use of gnome_pixmap_file

Tue Mar 24 22:32:11 CET 1998  Eckeherad Berns  <eb@berns.prima.de>

	* gnome-propertybox.c: applied patch from Havoc Pennington
	<hp@pobox.com>

Tue Mar 24 19:24:23 CET 1998  Eckeherad Berns  <eb@berns.prima.de>

	* gnome-messagebox.c (gnome_message_box_new): use
	gnome_pixmap_new_from_file for pixmap loading

	We will have to supply some pixmaps for the gnome message box. I
	couldn't find any "bomp.{xpm,png}".

Tue Mar 24 19:24:23 CET 1998  Eckeherad Berns  <eb@berns.prima.de>

	* gnome-app-helper.c (gnome_app_do_ui_accelerator_setup): use
	gtk_widget_install_accelerator to make the accelerators visible in